# Sentinel-GUI

./: Cargo.toml  sentinel-gui.desktop  sentinel-gui.service
src/: main.rs
