[package]
name = "sentinel-gui"
version = "0.1.0"
edition = "2024"
license = "BSL-1.1"
description = "Standalone GUI dashboard for PlausiDen Sentinel IDS/IPS"

[dependencies]
plausiden-sentinel = { path = "../PlausiDen-Sentinel" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
